Content improvements, icon refactor, bsky verification

--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -54,13 +54,13 @@
           class="splide__arrow splide__arrow--prev button button-outline button--rounded button-outline--primary featured-projects__control"
         >
           <span class="visually-hidden">Previous project</span>
-          <span class="icon icon--arrow-up"></span>
+          {% lucide "arrow-up", { "size": "24", "stroke-width": "2" } %}
         </button>
         <button
           class="splide__arrow splide__arrow--next button button-outline button--rounded button-outline--primary featured-projects__control"
         >
           <span class="visually-hidden">Next project</span>
-          <span class="icon icon--arrow-down"></span>
+          {% lucide "arrow-down", { "size": "24", "stroke-width": "2" } %}
         </button>
       </nav>
       <div class="splide__track">
