--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -2,8 +2,10 @@
   <section class="u-container u-container-spacing u-container--medium-large">
     <p class="footer__credits">
       Created and maintained with
-      <span class="icon icon--heart footer__icon"></span>
-      by Adrian Bece since 2015
+      <span class="c-primary"
+        >{% lucide "heart", { "size": "16", "stroke-width": "3", "fill":
+        "currentColor" } %}</span
+      >&nbsp;by Adrian Bece since 2015
     </p>
     {% include 'layouts/partials/linkList.njk' %}
     <blockquote class="footer__quote">Per aspera ad astra.</blockquote>
