--- a/src/_includes/layouts/partials/fullBanner.njk
+++ b/src/_includes/layouts/partials/fullBanner.njk
@@ -1,5 +1,8 @@
 <section class="banner">
-  <article class="u-container u-container-spacing u-container--medium-large banner__container">
-    Devoted to crafting delightful experiences with exceptional performance and quality
+  <article
+    class="u-container u-container-spacing u-container--medium-large banner__container"
+  >
+    Devoted to handcrafting delightful experiences with exceptional performance
+    and quality
   </article>
 </section>
