--- a/src/_includes/layouts/partials/linkList.njk
+++ b/src/_includes/layouts/partials/linkList.njk
@@ -1,32 +1,49 @@
 <ul class="u-list-reset links {{ styleClass }}">
-    <li class="links__item">
-        <a
-            href="https://twitter.com/AdrianBeceDev"
-            target="_blank"
-            class="u-link-reset links__link link"
-            rel="noopener noreferrer">
-            <span class="visually-hidden">Twitter</span>
-            <span class="icon icon--social-twitter"></span>
-        </a>
-    </li>
-    <li class="links__item">
-        <a
-            href="https://www.linkedin.com/in/adrianbece/"
-            target="_blank"
-            class="u-link-reset  links__link link"
-            rel="noopener noreferrer">
-            <span class="visually-hidden">LinkedIn</span>
-            <span class="icon icon--social-linkedin"></span>
-        </a>
-    </li>
-    <li class="links__item">
-        <a
-            href="https://github.com/codeAdrian"
-            target="_blank"
-            class="u-link-reset  links__link link"
-            rel="noopener noreferrer">
-            <span class="visually-hidden">GitHub</span>
-            <span class="icon icon--social-github"></span>
-        </a>
-    </li>
+  <li class="links__item">
+    <a
+      href="https://bsky.app/profile/adrianbecedev.bsky.social"
+      target="_blank"
+      class="u-link-reset links__link link"
+      rel="noopener noreferrer"
+    >
+      <span class="visually-hidden">BlueSky</span>
+      {% lucide "cloud", { "size": "30", "stroke-width": "3" } %}
+    </a>
+  </li>
+  <li class="links__item">
+    <a
+      href="https://twitter.com/AdrianBeceDev"
+      target="_blank"
+      class="u-link-reset links__link link"
+      rel="noopener noreferrer"
+    >
+      <span class="visually-hidden">Twitter</span>
+      {% lucide "twitter", { "size": "30", "stroke-width": "0", fill:
+      "currentColor" } %}
+    </a>
+  </li>
+  <li class="links__item">
+    <a
+      href="https://www.linkedin.com/in/adrianbece/"
+      target="_blank"
+      class="u-link-reset links__link link"
+      rel="noopener noreferrer"
+    >
+      <span class="visually-hidden">LinkedIn</span>
+      {% lucide "linkedin", { "size": "30", "stroke-width": "1", fill:
+      "currentColor" } %}
+    </a>
+  </li>
+  <li class="links__item">
+    <a
+      href="https://github.com/codeAdrian"
+      target="_blank"
+      class="u-link-reset links__link link"
+      rel="noopener noreferrer"
+    >
+      <span class="visually-hidden">GitHub</span>
+      {% lucide "github", { "size": "30", "stroke-width": "1", fill:
+      "currentColor" } %}
+    </a>
+  </li>
 </ul>
