--- a/src/assets/css/_component.link.pcss
+++ b/src/assets/css/_component.link.pcss
@@ -19,6 +19,10 @@
   &--color {
     color: var(--color-primary);
 
+    &:visited {
+      color: var(--color-primary);
+    }
+
     &:hover,
     &:focus,
     &:active {
