--- a/src/assets/css/_setup.icons.pcss
+++ b/src/assets/css/_setup.icons.pcss
@@ -1,66 +1,3 @@
-@font-face {
-  font-family: 'devstar';
-  src: url('/assets/fonts/devstar.woff2?qvbl0d') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-.icon {
-  font-family: 'devstar' !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  &::before {
-    color: inherit;
-  }
-}
-
-.icon--stack:before {
-  content: '\e900';
-}
-.icon--heart:before {
-  content: '\f004';
-}
-.icon--image:before {
-  content: '\f03e';
-}
-.icon--social-twitter:before {
-  content: '\f081';
-}
-.icon--social-facebook:before {
-  content: '\f082';
-}
-.icon--social-linkedin:before {
-  content: '\f08c';
-}
-.icon--social-github:before {
-  content: '\f092';
-}
-.icon--video:before {
-  content: '\f16a';
-}
-.icon--quotes-left:before {
-  content: '\e977';
-}
-.icon--trophy:before {
-  content: '\e99e';
-}
-.icon--star-full:before {
-  content: '\e9d9';
-}
-.icon--arrow-up:before {
-  content: '\ea3a';
-}
-.icon--arrow-right:before {
-  content: '\ea3c';
-}
-.icon--arrow-down:before {
-  content: '\ea3e';
-}
-.icon--arrow-left:before {
-  content: '\ea40';
+.icon-lucide {
+  display: inline;
 }
