--- a/src/_includes/layouts/partials/linkList.njk
+++ b/src/_includes/layouts/partials/linkList.njk
@@ -1,7 +1,7 @@
 <ul class="u-list-reset links {{ styleClass }}">
   <li class="links__item">
     <a
-      href="https://bsky.app/profile/adrianbecedev.bsky.social"
+      href="https://bsky.app/profile/codeadrian.github.io"
       target="_blank"
       class="u-link-reset links__link link"
       rel="noopener noreferrer"
