variable fonts, style fixes

--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -72,11 +72,20 @@
 
   @media (--screen-desktop-medium) {
     padding: var(--spacing-n3) var(--spacing-n2);
+    right: initial;
+    display: flex;
+    top: 50%;
+    left: -68%;
+    transform: translateY(-50%);
+  }
+
+  @media (--screen-desktop-larger) {
+    padding: var(--spacing-n3) var(--spacing-n2);
     background: var(--color-gray-lightest);
     border: 2px solid var(--color-gray-light);
     border-radius: var(--spacing-n2);
     right: initial;
-    left: -73%;
+    left: -73.2%;
     display: flex;
     top: 50%;
     transform: translateY(-50%);
