--- a/src/assets/css/_block.portfolio.pcss
+++ b/src/assets/css/_block.portfolio.pcss
@@ -83,8 +83,9 @@
       & p {
         margin-top: var(--spacing-1);
         font-size: var(--font-size-2);
-        font-weight: var(--font-weight-bold);
         font-family: var(--font-family-primary);
+        font-optical-sizing: auto;
+        font-weight: var(--font-weight-bold);
       }
 
       & small {
