--- a/src/assets/css/_component.button.pcss
+++ b/src/assets/css/_component.button.pcss
@@ -6,6 +6,8 @@
   line-height: 1;
   cursor: pointer;
   font-family: var(--font-family-primary);
+  font-optical-sizing: auto;
+  font-weight: var(--font-weight-regular);
   text-transform: uppercase;
   gap: var(--spacing-n2);
   transition: color 0.25s var(--transition-easing),
