--- a/src/assets/css/_layout.header.pcss
+++ b/src/assets/css/_layout.header.pcss
@@ -19,6 +19,8 @@
   &__title {
     color: var(--color-primary);
     font-family: var(--font-family-primary);
+    font-optical-sizing: auto;
+    font-weight: var(--font-weight-regular);
     transition: color 0.25s var(--transition-easing);
     font-size: clamp(var(--font-size-2), 3vw + 1rem, var(--font-size-3));
     padding-top: var(--spacing-n1);
