--- a/src/assets/css/_setup.typography.pcss
+++ b/src/assets/css/_setup.typography.pcss
@@ -1,5 +1,7 @@
 body {
   font-family: var(--font-family-secondary);
+  font-optical-sizing: auto;
+  font-weight: var(--font-weight-semibold);
   font-size: var(--font-size-0);
   line-height: var(--line-height);
   color: var(--color-gray-darkest);
@@ -8,5 +10,6 @@ body {
 h1,
 h2 {
   font-family: var(--font-family-primary);
+  font-optical-sizing: auto;
   font-weight: var(--font-weight-regular);
 }
