--- a/src/assets/css/_variables.media.pcss
+++ b/src/assets/css/_variables.media.pcss
@@ -4,3 +4,4 @@
 @custom-media --screen-desktop-small screen and (min-width: 64rem); /* 1024px */
 @custom-media --screen-desktop-medium screen and (min-width: 85rem); /* 1360px */
 @custom-media --screen-desktop-large screen and (min-width: 90rem); /* 1440px */
+@custom-media --screen-desktop-larger screen and (min-width: 110rem); /* 1760px */
