--- a/src/_includes/layouts/partials/fonts.njk
+++ b/src/_includes/layouts/partials/fonts.njk
@@ -1,10 +1,6 @@
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-    rel="preload"
-    as="style"
-    href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Spartan:wght@500;700&display=swap"/>
-<link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Spartan:wght@500;700&display=swap"
-    media="print"
-    onload="this.media='all'"/>
+  href="https://fonts.googleapis.com/css2?family=Spartan:wght@500..700&family=Oswald:wght@400..700&display=swap"
+  rel="stylesheet"
+/>
