--- a/src/assets/css/_component.card.pcss
+++ b/src/assets/css/_component.card.pcss
@@ -5,8 +5,8 @@
   position: relative;
 
   @media (--screen-desktop-large) {
-    padding-left: var(--spacing-2);
-    padding-right: var(--spacing-2);
+    padding-left: calc(var(--spacing-1) + var(--spacing-n2));
+    padding-right: calc(var(--spacing-1) + var(--spacing-n2));
   }
 
   .card__wrapper {
@@ -15,7 +15,7 @@
   }
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     right: 0;
     bottom: var(--spacing-3);
