--- a/src/assets/css/_variables.typography.pcss
+++ b/src/assets/css/_variables.typography.pcss
@@ -18,6 +18,7 @@
     sans-serif;
 
   --font-weight-regular: 400;
+  --font-weight-semibold: 500;
   --font-weight-bold: 700;
 
   --transition-easing: cubic-bezier(0.45, 0.05, 0.55, 0.95);
