Mobile style fixes and improvements

--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -14,7 +14,7 @@
                 {{ project.data.type }} - {{ project.data.tech }}
               </span>
             </aside>
-            <p class="project-card__content">
+            <p class="project-card__content u-scroll-shadows">
               {{ project.data.description }}
             </p>
             <a
@@ -34,7 +34,7 @@
                 {{ project.data.type }} - {{ project.data.tech }}
               </span>
             </aside>
-            <p class="project-card__content">
+            <p class="project-card__content u-scroll-shadows">
               {{ project.data.description }}
             </p>
             <a
