--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -1,8 +1,13 @@
 .featured-projects {
-  border-radius: var(--spacing-n1);
   grid-gap: var(--spacing-1);
-  padding: var(--spacing-1) 0 var(--spacing-2);
+  padding: var(--spacing-1) 0 0;
   border: 2px solid var(--color-gray-light);
+  margin: 0 calc(-1 * (var(--spacing-1) + 2px));
+
+  @media (--screen-phone-large) {
+    border-radius: var(--spacing-n1);
+    margin: 0;
+  }
 
   @media (--screen-desktop-medium) {
     padding: 0 var(--spacing-1);
@@ -39,6 +44,11 @@
 .featured-projects__info {
   position: relative;
   text-align: center;
+  padding-bottom: var(--spacing-2);
+
+  @media (--screen-phone-large) {
+    padding-bottom: 0;
+  }
 
   @media (--screen-desktop-medium) {
     text-align: left;
@@ -57,13 +67,15 @@
   z-index: var(--level-2);
   display: inline-flex;
   flex-direction: column;
-  transform: translate3d(-50%, 0, 0) rotateZ(-90deg);
+  top: -100%;
+  transform: translate3d(-50%, calc(-1 * var(--spacing-2)), 0) rotateZ(-90deg);
   backface-visibility: hidden;
   position: absolute;
   bottom: calc(-1 * var(--spacing-2));
   left: 50%;
 
   @media (--screen-phone-large) {
+    top: 0;
     transform: translate3d(0, -75%, 0) rotateZ(-90deg);
     left: auto;
     bottom: initial;
