--- a/src/assets/css/_block.portfolio.pcss
+++ b/src/assets/css/_block.portfolio.pcss
@@ -114,12 +114,17 @@
     }
 
     & aside {
+      padding: var(--spacing-2) calc(var(--spacing-3) + var(--spacing-n1))
+        var(--spacing-3);
       margin-top: var(--spacing-2);
       margin-bottom: var(--spacing-2);
       background-color: var(--color-gray-light);
       margin-left: calc(-1 * var(--spacing-4));
       margin-right: calc(-1 * var(--spacing-4));
-      padding: var(--spacing-2) var(--spacing-4) var(--spacing-3);
+
+      @media (--screen-phone-large) {
+        padding: var(--spacing-2) var(--spacing-4) var(--spacing-3);
+      }
 
       & ul {
         margin: 0;
