--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -6,7 +6,7 @@
 
   @media (--screen-phone-large) {
     border-radius: var(--spacing-n1);
-    margin: 0;
+    margin: 0 auto;
   }
 
   @media (--screen-desktop-medium) {
