Add clay.css project to portfolio

--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -21,7 +21,7 @@
               class="button button--primary button--rounded button--link button--medium"
               href="{{ project.url }}"
             >
-              View Project
+              Read more
             </a>
           </div>
         </div>
@@ -41,7 +41,7 @@
               class="button button--primary button--rounded button--link button--medium"
               href="{{ project.url }}"
             >
-              View Project
+              Read more
             </a>
           </div>
         </div>
