Update and modernize 11ty config and packages

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,17 +1,20 @@
 ---
-title: 404 - Page not found
+title: Page Not Found
 layout: base
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
-  {% include 'layouts/partials/header.njk' %}
-  <main class="banner u-t-center u-container-spacing">
-    <section class="banner__container u-container u-container--large">
-      <h1>Page not found</h1><br/>
-      <p>The page you are looking for does not exist.</p>
-      <br/>
-        <a class="button button--primary button--rounded button--link button--medium"" href="/">Go back to the homepage</a>
-    </section>
-  </main>
-{% include 'layouts/partials/footer.njk' %}
+<main class="banner u-t-center u-container-spacing">
+  <section class="banner__container u-container u-container--large">
+    <h1>Page not found</h1>
+    <br />
+    <p>The page you are looking for does not exist.</p>
+    <br />
+    <a
+      class="button button--primary button--rounded button--link button--medium"
+      href="/"
+      >Go back to the homepage</a
+    >
+  </section>
+</main>
