--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -1,4 +1,18 @@
 <footer class="footer u-t-center">
+  <aside class="footer__marquee" aria-hidden="true">
+    <div class="footer__marquee-inner">
+      {% for i in range(0, 5) %}
+      <span class="footer__marquee-item">Delightful</span>
+      <span class="footer__marquee-item">Usable</span>
+      <span class="footer__marquee-item">Performant</span>
+      <span class="footer__marquee-item">Awesome</span>
+      <span class="footer__marquee-item">SEO Optimized</span>
+      <span class="footer__marquee-item">Hand-crafted</span>
+      <span class="footer__marquee-item">Accessible</span>
+      <span class="footer__marquee-item">Memorable</span>
+      {% endfor %}
+    </div>
+  </aside>
   <section class="u-container u-container-spacing u-container--medium-large">
     <p class="footer__credits">
       Created and maintained with
