--- a/src/assets/css/_block.banner.pcss
+++ b/src/assets/css/_block.banner.pcss
@@ -3,6 +3,7 @@
   padding-top: var(--spacing-3);
   padding-bottom: var(--spacing-5);
   text-align: center;
+  position: relative;
 
   @media (--screen-tablet-small) {
     padding-top: var(--spacing-4);
