--- a/src/assets/css/_setup.page.pcss
+++ b/src/assets/css/_setup.page.pcss
@@ -18,10 +18,12 @@
 html {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
