optimize font loading

--- a/src/_includes/layouts/partials/fonts.njk
+++ b/src/_includes/layouts/partials/fonts.njk
@@ -1,6 +1,19 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Spartan:wght@500..700&family=Oswald:wght@400..700&display=swap"
-  rel="stylesheet"
+  rel="preload"
+  as="style"
+  href="https://fonts.googleapis.com/css2?family=Spartan:wght@500..700&family=Oswald:wght@400..700&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzČĆĐŠŽčćđšž0123456789.,!%26@%3F%27%22()-%24%23%3A%3B_%20%2F%5C%26%C2%A9%E2%80%93%E2%80%94%E2%80%98%E2%80%99%E2%80%9C%E2%80%9D&display=swap"
 />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Spartan:wght@500..700&family=Oswald:wght@400..700&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzČĆĐŠŽčćđšž0123456789.,!%26@%3F%27%22()-%24%23%3A%3B_%20%2F%5C%26%C2%A9%E2%80%93%E2%80%94%E2%80%98%E2%80%99%E2%80%9C%E2%80%9D&display=swap"
+  media="print"
+  onload="this.media='all'"
+/>
+<noscript>
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Spartan:wght@500..700&family=Oswald:wght@400..700&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzČĆĐŠŽčćđšž0123456789.,!%26@%3F%27%22()-%24%23%3A%3B_%20%2F%5C%26%C2%A9%E2%80%93%E2%80%94%E2%80%98%E2%80%99%E2%80%9C%E2%80%9D&display=swap"
+  />
+</noscript>
