--- a/src/assets/css/_setup.typography.pcss
+++ b/src/assets/css/_setup.typography.pcss
@@ -12,4 +12,6 @@ h2 {
   font-family: var(--font-family-primary);
   font-optical-sizing: auto;
   font-weight: var(--font-weight-regular);
+  font-synthesis: none;
+  font-display: swap;
 }
