--- a/src/assets/css/_variables.typography.pcss
+++ b/src/assets/css/_variables.typography.pcss
@@ -27,3 +27,13 @@
     --font-size-0: 1.125rem;
   }
 }
+
+@font-face {
+  font-family: 'Spartan';
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  font-display: swap;
+}
