--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -21,7 +21,9 @@
               class="button button--primary button--rounded button--link button--medium"
               href="{{ project.url }}"
             >
-              Read more
+              Read more<span class="visually-hidden">
+                about {{ project.data.title }}</span
+              >
             </a>
           </div>
         </div>
@@ -41,7 +43,9 @@
               class="button button--primary button--rounded button--link button--medium"
               href="{{ project.url }}"
             >
-              Read more
+              Read more<span class="visually-hidden">
+                about {{ project.data.title }}</span
+              >
             </a>
           </div>
         </div>
