desktop lighthouse update

--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -1,5 +1,5 @@
 <footer class="footer u-t-center">
-  <aside class="footer__marquee" aria-hidden="true">
+  <aside class="footer__marquee" role="presentation" aria-hidden="true">
     <div class="footer__marquee-inner">
       {% for i in range(0, 5) %}
       <span class="footer__marquee-item">Delightful</span>
