--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -133,6 +133,7 @@
     flex-direction: column;
     justify-content: flex-end;
     max-width: 480px;
+    aspect-ratio: 1/1;
 
     @media (--screen-phone-large) {
       padding-top: var(--spacing-2);
